@@ -1,3 +1,7 @@
+3/14/2002
+	- In jnamed, AXFR responses didn't have the message ID or flags
+	  set correctly.
+
 1/21/2002
 	- Handle empty domain statements in /etc/resolv.conf. (reported
 	  by Blake Ramsdell <blake@brutesquadlabs.com>)
